--- a/css/main.css
+++ b/css/main.css
@@ -131,14 +131,14 @@ body {
   main .img-box {
     position: absolute;
     display: block;
-    width: 100px;
-    height: 100px;
+    width: 120px;
+    height: 120px;
     background-image: url("../images/illustration-box-desktop.svg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
-    left: 513px;
-    top: 478px;
+    right: calc(100% - 60px);
+    top: calc(55% - 60px);
     z-index: 2;
     transition: 0.3s;
   }
@@ -153,12 +153,13 @@ body {
     height: auto;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
+    position: relative;
   }
   .container .section-image {
     width: 450px;
     height: 400px;
     position: relative;
+    overflow: hidden;
     z-index: 1;
   }
   .container .section-image .img-primary img {
