--- a/css/main.scss
+++ b/css/main.scss
@@ -154,14 +154,14 @@ body {
         .img-box {
             position: absolute;
             display: block;
-            width: 100px;
-            height: 100px;
+            width: 120px;
+            height: 120px;
             background-image: url("../images/illustration-box-desktop.svg");
             background-repeat: no-repeat;
             background-position: center;
             background-size: contain;
-            left: 513px;
-            top: 478px;
+            right: calc(100% - 60px);
+            top: calc(55% - 60px);
             z-index: 2;
             transition: .3s;
           }
@@ -178,24 +178,23 @@ body {
     height: auto;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
+   position: relative;
     .section-image {
-     // border: 1px solid gray;
-
-      //background-color: red;
 
       width: 450px;
       height: 400px;
       position: relative;
-
+      overflow: hidden;
       z-index: 1;
       .img-primary {
+        
         img {
           position: absolute;
           width: 350px;
           height: auto;
           left: -309px;
           top: 150px;
+          
         }
       }
 
